What's changed in loggerhead?
=============================

2.0.1
-----

    - Fix Loggerhead version/revision display in templates.

2.0.0 [19Aug2022]
-----------------

    - Make RevInfoDiskCache use a marshal version supported by Python 2, to
      ease migration. (Colin Watson)

    - Drop support for Python < 3 and Breezy < 3.1. (Jelmer Vernooĳ)

    - Add a ``/health`` target, convenient for health checking in e.g.
      Kubernetes. (Jelmer Vernooĳ)

    - Fix highlighting for large files. (Jürgen Gmach, #1966702)

    - Avoid use of file ids - use paths instead. (Jelmer Vernooĳ)

    - Port from SimpleTAL to Chameleon. (Colin Watson)

    - Modernize packaging.  There are new dependencies on
      ``importlib_metadata`` (for Python < 3.8) and ``packaging``, in order
      to avoid a self-import in ``setup.py``.  People proxying Loggerhead
      through Apache should install the ``loggerhead[proxied]`` extra;
      people running it via FastCGI, SCGI, or AJP should install the
      ``loggerhead[flup]`` extra. (Colin Watson, #1831661)

1.20.0 [18Jul2021]
------------------

    - Port to Breezy (https://www.breezy-vcs.org/). (Jelmer Vernooĳ)

    - Port to Python 3. (Jelmer Vernooĳ)

    - Serve-branches has been renamed to 'loggerhead-serve'. (Jelmer Vernooĳ)

    - Fixed weird icon in file lists (e.g. revision summaries) when a file or
      directory with a blank name was listed. (Cruz Bishop, #387337).

    - Add directory icons for directories in file lists (e.g. revision
      summaries). Previously they were using the file icon.
      (Cruz Bishop, #1053340).

    - Format files under one kilobyte as "x bytes". (Cruz Bishop, #990217)

    - Make the number of lines of context in embedded diffs on revision
      pages configurable via a ``context`` query argument. (Paul Nixon)

    - Add ``loggerhead/middleware`` and a few other files to the sdist.
      (Toshio Kuratomi)

    - Widen the line number boxes just a little bit. (Cruz Bishop, #310255)
