@@ -71,7 +71,7 @@ ul#list-files li.desc {
     padding: 0 1%;
     color: #000;
     font-size: 85%;
-    font-family: 'UbuntuBeta Mono', 'Ubuntu Mono', monospace;
+    font-family: 'Ubuntu Mono', monospace;
     }
 .unified .code {
     width: 87%;
