@@ -26,7 +26,7 @@ body, html, table {
     }
 body {
     font-weight: normal;
-    font-family: UbuntuBeta, Ubuntu, 'Bitstream Vera Sans', 'DejaVu Sans', Tahoma, sans-serif;
+    font-family: Ubuntu, 'Bitstream Vera Sans', 'DejaVu Sans', Tahoma, sans-serif;
     color: #000;
     background: #fff;
     }
