@@ -26,7 +26,7 @@
     }
 .viewLine pre,
 .viewCont pre {
-    font-family: 'UbuntuBeta Mono', 'Ubuntu Mono', monospace;
+    font-family: 'Ubuntu Mono', monospace;
     line-height: 1.1;
     }
 .viewLine pre {
